--- a/README
+++ b/README
@@ -1,3 +1,6 @@
------------
-| easybit |
------------
+---------------
+| keybase.dns |
+---------------
+
+# p2p foundation
+https://wiki.p2pfoundation.net/Namecoin
